--- a/html/main.html
+++ b/html/main.html
@@ -15,27 +15,30 @@
   	<div class="top-right">
   		<a class="gmail text" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
   		<a class="images text" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
-  		<a href="https://www.google.com/intl/en/about/products?tab=wh"><img id="squares" src="../images/apps-google.png"></a>
+  		<a href="https://www.google.com/intl/en/about/products?tab=wh"><img class="squares" src="../images/apps-google.png"></a>
   		<button class="sign-in" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fgws_rd%3Dssl">Sign In</button>
   	</div>
   	<main class="center-me">
+  		<img class="microphone" src="../images/micro.png">
   		<img id="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" title="Google">
   		<form class="search" action="/search">
-  			<input id="search-bar" maxlength=2048>
-  		  	<input id="search-button" value="Google Search" type="submit">
-  			<input id="lucky-button" value="I'm Feeling Lucky" type="submit">
+  			<input id="search-bar" maxlength=2048 type="text">
   		</form>
+  		<div class="buttons">
+  		  	<input id="search-button" value="Google Search" type="submit">
+	  		<input id="lucky-button" value="I'm Feeling Lucky" type="submit">
+	  	</div>
   	</main>
   	<footer class="footer">
   		<div class="bottom-left">
-  			<a class="advertising text" href="https://www.google.com/intl/en_us/ads/?subclass=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
- 			<a class="business text" href="https://www.google.com/services/?subclass=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
- 			<a class="how-search-works text" href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a>
+  			<a class="advertising bottom-text" href="https://www.google.com/intl/en_us/ads/?subclass=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+ 			<a class="business bottom-text" href="https://www.google.com/services/?subclass=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
+ 			<a class="how bottom-text" href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a>
   		</div>
   		<div class="bottom-right">
-  			<a class="privacy text" href="https://www.google.com/intl/en_us/policies/privacy/?fg=1">Privacy</a>
-  			<a class="terms text" href="https://www.google.com/intl/en_us/policies/terms/?fg=1">Terms</a>
-  			<a class="settings text" href="https://www.google.com/preferences?hl=en">Settings</a>
+  			<a class="privacy bottom-text" href="https://www.google.com/intl/en_us/policies/privacy/?fg=1">Privacy</a>
+  			<a class="terms bottom-text" href="https://www.google.com/intl/en_us/policies/terms/?fg=1">Terms</a>
+  			<a class="settings bottom-text" href="https://www.google.com/preferences?hl=en">Settings</a>
   		</div>
   	</footer>
   </body>
