Fixed broken image link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   		<button class="sign-in" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fgws_rd%3Dssl">Sign In</button>
   	</div>
   	<main class="center-me">
-  		<img class="microphone" src="../images/micro.png">
+  		<img class="microphone" src="images/micro.png">
   		<img id="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" title="Google">
   		<form class="search" action="/search">
   			<input id="search-bar" maxlength=2048 type="text">
